using Microsoft.AspNetCore.Mvc;

namespace courses_dotnet_api.Src.Controllers;

[ApiController]
[Route("api/[controller]")]
public class BaseApiController : ControllerBase { }
